# march-mania

./: .gitattributes  .gitignore  main.py  pyproject.toml  requirements.txt
data/: WGameCities.csv  WNCAATourneyDetailedResults.csv
data/raw/: MConferenceTourneyGames.csv  MGameCities.csv  MTeamCoaches.csv  WConferenceTourneyGames.csv  WSeasons.csv
docs/ai_context/: AGENT_INSTRUCTIONS.md  MASTER_ARCHITECTURE.md  PHASE_PLAN.md  audit_report.md
ncaa_pipeline/context/: __init__.py  fold_context.py  pipeline_config.py
ncaa_pipeline/data/: __init__.py  datasets.py  loader.py  materializer.py
ncaa_pipeline/features/: __init__.py  assembler.py  massey_extractor.py  rolling_store.py
ncaa_pipeline/policies/: __init__.py  cutoff_policy.py  leakage_guard.py
ncaa_pipeline/tracking/: __init__.py  aim_mlflow_tracker.py
scripts/: dataset_audit.py
tests/: test_aim_mlflow_tracker.py  test_datasets.py  test_features.py  test_materializer.py  test_pipeline_config.py  test_tier1_foundation.py
tools/llm-council/: pyproject.toml
tools/llm-council/backend/: config.py  openrouter.py
