[project]
name = "march-mania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aim>=3.29.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "exceptiongroup==1.3.1",
    "fastapi==0.121.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "lightgbm>=4.6.0",
    "mlflow>=3.10.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pytest>=9.0.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "scikit-learn>=1.7.2",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tabpfn>=6.4.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
